force-app/main/default/objects/SMS_History_Omni__c/SMS_History_Omni__c.object-meta.xml
<CustomObject>
    <label>SMS History</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0}</displayFormat>
        <label>S.No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>