force-app/main/default/objects/SMS_History_Omni__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>SMS_History_Omni</relationshipName>
    <type>Lookup</type>
</CustomField>