force-app/main/default/objects/SMS_History_Omni__c/fields/MediaUrl__c.field-meta.xml
<CustomField>
    <fullName>MediaUrl__c</fullName>
    <label>MediaUrl</label>
    <type>TextArea</type>
</CustomField>