force-app/main/default/objects/SMS_History_Omni__c/fields/Service_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Name__c</fullName>
    <label>Service Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>