force-app/main/default/objects/SMS_History_Omni__c/fields/SMS_Type__c.field-meta.xml
<CustomField>
    <fullName>SMS_Type__c</fullName>
    <label>SMS Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>