force-app/main/default/objects/SMS_History_Omni__c/fields/To_Number__c.field-meta.xml
<CustomField>
    <fullName>To_Number__c</fullName>
    <label>To Number</label>
    <type>Phone</type>
</CustomField>