force-app/main/default/objects/SMS_History_Omni__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SMS_Type__c</columns>
    <columns>Message__c</columns>
    <columns>MediaUrl__c</columns>
    <columns>From_Number__c</columns>
    <columns>To_Number__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Lead__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Service_Name__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>